--- a/chatGPT/video.html
+++ b/chatGPT/video.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(216, 123, 196);
+            background-color: rgb(123, 216, 123);
         }
 
         #video-container {
@@ -169,7 +169,7 @@ const rows = 20;
 const cols = 20;
 let interval = 500 // Tidsintervall i millisekunder
 let isPlaying = false;
-let timerId;
+let timerId = 40;
 
 
 // Initialiserer Game of Life grid
