--- a/chatGPT/video2.html
+++ b/chatGPT/video2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(204, 135, 32);
+            background-color: rgb(32, 204, 190);
         }
 
         #video-container {
@@ -43,7 +43,8 @@
             width: 640px;
             height: 480px;
             display: grid;
-
+            grid-template-columns: repeat(20, 32px);
+            grid-template-rows: repeat(15, 32px);
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
