--- a/chatGPT/video.html
+++ b/chatGPT/video.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(69, 73, 12);
+            background-color: rgb(227, 243, 8);
         }
 
         #video-container {
@@ -299,7 +299,7 @@ function updateGrid() {
             if (cell === 1) {
                 // her fucker jeg det opp litt
                 cells[i * cols + j].classList.add('alive');
-                console.log(cols);
+                console.log(i);
             } else {
                 cells[i * cols + j].classList.remove('alive');
             }
