--- a/chatGPT/video2.html
+++ b/chatGPT/video2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(178, 190, 72);
+            background-color: rgb(80, 72, 190);
         }
 
         #video-container {
@@ -27,7 +27,7 @@
             top: 0;
             left: 0;
             display: grid;
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
+            /* transform: scaleX(-1); Speilvend pikselrutenettet */
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
 
@@ -47,7 +47,7 @@
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
+            /* transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
         .cell {
