--- a/chatGPT/video.html
+++ b/chatGPT/video.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(192, 243, 8);
+            background-color: rgb(137, 8, 243);
         }
 
         #video-container {
@@ -166,7 +166,7 @@ const polySynth = new Tone.PolySynth().toDestination();
 // Definerer parametere for Game of Life
 
 const rows = 20;
-const cols = 15;
+const cols = 20;
 let interval = 500 // Tidsintervall i millisekunder
 let isPlaying = false;
 let timerId;
@@ -285,8 +285,8 @@ function updateGrid() {
                 }
             } else if (grid[i][j] === 0 && neighbors === 3) {
               // her fucka jeg opp
-                // newGrid[i][j] = 1;
-               grid[i][j] = 1;
+               newGrid[i][j] = 1;
+               //grid[i][j] = 1;
                 playNote(i, j);
             } else {
                 newGrid[i][j] = grid[i][j];
