--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
 
         body {
-            background-color: rgb(243, 122, 8);
+            background-color: rgb(243, 239, 8);
         }
 
         #video-container {
             position: relative;
-            width: 640px; /* Just an example width */
-            height: 700px; /* Just an example height */
+            width: 1280px; /* Just an example width 640 x 2*/
+            height: 960px; /* Just an example height 480 x 2 */
         }
 
         #controls {
@@ -30,8 +30,8 @@
             display: grid;
             grid-template-columns: repeat(20, 62px);
             grid-template-rows: repeat(15, 62px);
-            width: 640px;
-            height: 480px; 
+            width: 1280px; /* 640 x 2*/
+            height: 960px; /* 480 x 2 */
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
 
         }
