--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
 
         body {
-            background-color: rgb(243, 102, 8);
+            background-color: rgb(8, 110, 243);
         }
 
         #video-container {
             position: relative;
-            width: 576px; /* 18x32*/
-            height: 352px; /* 11x32*/
+            width: 600px; /* 18x32*/
+            height: 400px; /* 11x32*/
         }
 
         #controls {
@@ -30,8 +30,8 @@
             display: grid;
             grid-template-columns: repeat(18, 32px);/* 18x11 piksler*/
             grid-template-rows: repeat(11, 32px); /* 18x11 piksler*/
-            width: 576px; /* 18x32*/
-            height: 352px; /* 11x32*/
+            width: 600px; /* 18x32*/
+            height: 400px; /* 11x32*/
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
 
         }
@@ -48,8 +48,8 @@
             width: 640px;
             height: 640px;
             display: grid;
-            grid-template-columns: repeat(20, 32px);
-            grid-template-rows: repeat(15, 32px);
+            grid-template-columns: repeat(18, 32px);/* 18x11 piksler*/
+            grid-template-rows: repeat(11, 32px); /* 18x11 piksler*/
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
