--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
 
         body {
-            background-color: rgb(8, 110, 243);
+            background-color: rgb(243, 239, 8);
         }
 
         #video-container {
             position: relative;
-            width: 600px; /* 18x32*/
-            height: 400px; /* 11x32*/
+            width: 640px; /* Just an example width */
+            height: 700px; /* Just an example height */
         }
 
         #controls {
@@ -28,10 +28,10 @@
             top: 0;
             left: 0;
             display: grid;
-            grid-template-columns: repeat(18, 32px);/* 18x11 piksler*/
-            grid-template-rows: repeat(11, 32px); /* 18x11 piksler*/
-            width: 600px; /* 18x32*/
-            height: 400px; /* 11x32*/
+            grid-template-columns: repeat(20, 32px);
+            grid-template-rows: repeat(15, 32px);
+            width: 640px; 
+            height: 480px; 
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
 
         }
@@ -48,8 +48,8 @@
             width: 640px;
             height: 640px;
             display: grid;
-            grid-template-columns: repeat(18, 32px);/* 18x11 piksler*/
-            grid-template-rows: repeat(11, 32px); /* 18x11 piksler*/
+            grid-template-columns: repeat(20, 32px);
+            grid-template-rows: repeat(15, 32px);
             transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
