--- a/chatGPT1.html
+++ b/chatGPT1.html
@@ -3,390 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game of Life med Hilbert-kurve sonifisering</title>
+    <title>Hilbert Curve Sonification</title>
     <style>
-        body {
-            background-color: rgb(192, 243, 8);
-        }
-
-        #video-container {
-            position: relative;
-            width: 640px; /* Just an example width */
-            height: 700px; /* Just an example height */
-        }
-
-        #controls {
-            position: static;
-            width: 400px; /* Just an example width */
-            height: 400px; /* Just an example height */
-        }
-
-        #pixel-grid {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: grid;
-            grid-template-columns: repeat(20, 32px);
-            grid-template-rows: repeat(15, 32px);
-            width: 640px; 
-            height: 480px; 
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
-        }
-
-        .pixel {
-            width: 32px;
-            height: 32px;
-            border: 1px solid #000;
-        }
-
-        #grid {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 640px;
-            height: 640px;
-            display: grid;
-            grid-template-columns: repeat(20, 32px);
-            grid-template-rows: repeat(15, 32px);
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
-        }
-
-        .cell {
-            width: 32px;
-            height: 32px;
-            border: 2px solid rgb(102, 8, 253);
-        }
-
-        .alive {
-            background-color: rgb(20, 2, 3);
+        canvas {
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
+    <canvas id="canvas" width="600" height="600"></canvas>
+    <audio id="audio" autoplay></audio>
+    
+    <script src="hilbert.js"></script>
+    <script>
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+        const audio = document.getElementById('audio');
+        const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
-<div id="video-container">
-    <canvas id="pixel-grid"></canvas>
-    <canvas id="canvas" width="640" height="640"></canvas>
-    <div id="grid"></div>
-</div>
+        // Set up webcam input
 
-<div id="controls">
-    <button id="playPause">Play / Pause</button>
-    <button id="clear">Clear</button>
-    <button id="glider">Draw glider</button>
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-<script>
-    const pixelSize = 32;
-    const threshold = 100; // Threshold for darkness
-    let pixelGrid = [];
-
-    const initPixelGrid = () => {
-        for (let i = 0; i < 20; i++) {
-            pixelGrid[i] = [];
-            for (let j = 0; j < 20; j++) {
-                pixelGrid[i][j] = false;
+        // Function to draw the Hilbert Curve
+        function drawHilbertCurve(order) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            const size = canvas.width;
+            const points = hilbert(order);
+            const step = size / (1 << order);
+            ctx.beginPath();
+            ctx.moveTo(points[0].x * step, points[0].y * step);
+            for (let i = 1; i < points.length; i++) {
+                ctx.lineTo(points[i].x * step, points[i].y * step);
             }
+            ctx.stroke();
         }
-    };
 
-    const drawFrame = (context, videoWidth, videoHeight) => {
-        const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
-        context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
-        const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
-
-        for (let y = 0; y < 20; y++) {
-            for (let x = 0; x < 20; x++) {
-                const pixelIndex = (y * videoWidth * 4 * pixelSize) + (x * 4 * pixelSize);
-                let averageBrightness = 0;
-
-                for (let i = 0; i < pixelSize; i++) {
-                    for (let j = 0; j < pixelSize; j++) {
-                        const index = pixelIndex + (i * videoWidth * 4) + (j * 4);
-                        averageBrightness += (imageData[index] + imageData[index + 1] + imageData[index + 2]) / 3;
-                    }
-                }
-                averageBrightness /= (pixelSize * pixelSize);
-
-                if (averageBrightness < threshold) {
-                    if (!pixelGrid[y][x]) {
-                        pixelGrid[y][x] = true;
-                        context.fillStyle = '#000';
-                        context.fillRect(x * pixelSize, y * pixelSize, pixelSize, pixelSize);
-                        grid[y][x] = 1;
-                    }
-                } else {
-                    pixelGrid[y][x] = false;
-                }
+        // Function to sonify the Hilbert Curve
+        function sonifyHilbertCurve(order) {
+            const points = hilbert(order);
+            const audioBuffer = audioCtx.createBuffer(1, points.length, audioCtx.sampleRate);
+            const bufferData = audioBuffer.getChannelData(0);
+            for (let i = 0; i < points.length; i++) {
+                bufferData[i] = points[i].x / canvas.width; // You can modify this to sonify y-coordinate or both coordinates
             }
-        }
-        requestAnimationFrame(() => drawFrame(context, videoWidth, videoHeight));
-    };
-
-    const videoElement = document.createElement('video');
-    videoElement.autoplay = true;
-
-    navigator.mediaDevices.getUserMedia({ video: true })
-        .then(stream => {
-            videoElement.srcObject = stream;
-            videoElement.play();
-            videoElement.onloadedmetadata = () => {
-                const pixelGridCanvas = document.getElementById('pixel-grid');
-                const context = pixelGridCanvas.getContext('2d');
-                const { videoWidth, videoHeight } = videoElement;
-
-                pixelGridCanvas.width = videoWidth;
-                pixelGridCanvas.height = videoHeight;
-
-                initPixelGrid();
-                drawFrame(context, videoWidth, videoHeight);
-            };
-        })
-        .catch(err => {
-            console.error('An error occurred: ', err);
-        });
-
-    // Opprett en Tone.js synth
-    const synth = new Tone.Synth().toDestination();
-
-    // Definer en Hilbert-kurve
-    let hilbertPath = [];
-    let currentPos;
-
-    // Generer Hilbert-kurven
-    function generateHilbertPath(order, position, orientation, step) {
-        if (order == 0) return;
-
-        // Venstre sving
-        generateHilbertPath(order - 1, position, !orientation, step);
-
-        // Fremover
-        drawLine(position, orientation, step);
-        position.add(p5.Vector.mult(orientation, step));
-
-        // Høyre sving
-        generateHilbertPath(order - 1, position, orientation, step);
-
-        // Fremover
-        drawLine(position, !orientation, step);
-        position.add(p5.Vector.mult(!orientation, step));
-
-        // Fremover
-        generateHilbertPath(order - 1, position, orientation, step);
-
-        // Høyre sving
-        drawLine(position, orientation, step);
-        position.add(p5.Vector.mult(orientation, step));
-
-        // Venstre sving
-        generateHilbertPath(order - 1, position, !orientation, step);
-    }
-
-    // Tegn en linje fra nåværende posisjon i retning av orienteringen
-    function drawLine(position, orientation, step) {
-        let nextPos = p5.Vector.add(position, p5.Vector.mult(orientation, step));
-        hilbertPath.push({ start: position.copy(), end: nextPos.copy() });
-    }
-
-    // Tegn Hilbert-kurven
-    function draw() {
-        stroke(255);
-        for (let i = 0; i < hilbertPath.length; i++) {
-            let { start, end } = hilbertPath[i];
-            line(start.x, start.y, end.x, end.y);
-        }
-    }
-
-    // Spill toner langs Hilbert-kurven basert på Game of Life gridet
-    let noteIndex = 0;
-    for (let i = 0; i < hilbertPath.length; i++) {
-        let { start } = hilbertPath[i];
-        let x = map(start.x, 0, width, 0, rows);
-        let y = map(start.y, 0, height, 0, cols);
-        let cellState = grid[Math.floor(x)][Math.floor(y)];
-
-        // Spill tonen basert på celletilstanden
-        if (cellState === 1) {
-            let note = Tone.Frequency("C4").transpose(Math.floor(y * 2));
-            synth.triggerAttackRelease(note, "8n", "+" + i * 0.1);
-        }
-    }
-
-    // Definerer pentatonisk skala (C pentatonisk)
-    const pentatonicScale = ['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6'];
-
-    // Definerer parametere for Game of Life
-    const rows = 15;
-    const cols = 20;
-    let interval = 500 // Tidsintervall i millisekunder
-    let isPlaying = false;
-    let timerId;
-
-    // Initialiser Game of Life grid
-    let grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
-
-    // Opprettet et array for å holde styr på alle aktive synther
-    let activeSynths = [];
-    let availableSynths = [];
-
-    // Opprett grid-elementer i HTML
-    const gridContainer = document.getElementById('grid');
-    for (let i = 0; i < rows; i++) {
-        for (let j = 0; j < cols; j++) {
-            const cell = document.createElement('div');
-            cell.classList.add('cell');
-            cell.addEventListener('click', () => toggleCell(i, j));
-            gridContainer.appendChild(cell);
-        }
-    }
-
-    // Opprett event listener for play/pause-knappen
-    const playPauseButton = document.getElementById('playPause');
-    playPauseButton.addEventListener('click', togglePlay);
-
-    // Legg til en keydown-hendelse for å lytte etter "P"-tasten
-    document.addEventListener('keydown', (event) => {
-        if (event.key.toLowerCase() === 'p') {
-            togglePlay();
-        }
-    });
-
-    // Opprett en event listener for glider-knappen
-    const gliderButton = document.getElementById('glider');
-    gliderButton.addEventListener('click', drawGlider);
-
-    // Legg til en keydown-hendelse for å lytte etter "G"-tasten
-    document.addEventListener('keydown', (event) => {
-        if (event.key.toLowerCase() === 'g') {
-            drawGlider();
-        }
-    });
-
-    // Tegn inn en glider
-    function drawGlider(i, j) {
-        for (let i = 0; i < rows; i++) {
-            for (let j = 0; j < cols; j++) {
-                if ((i == 0 && j == 0) || (i == 1 && j == 1) || (i == 1 && j == 2) || (i == 2 && j == 0) || (i == 2 && j == 1)) {
-                    const cell = gridContainer.children[i * cols + j];
-                    cell.classList.toggle('alive');
-                    grid[i][j] = 1;
-                }
-            }
-        }
-    }
-
-    // Opprett event listener for clear-knappen
-    const clearButton = document.getElementById('clear');
-    clearButton.addEventListener('click', clearGrid);
-
-    // Legg til en keydown-hendelse for å lytte etter "C"-tasten
-    document.addEventListener('keydown', (event) => {
-        if (event.key.toLowerCase() === 'c') {
-            clearGrid();
-        }
-    });
-
-    // Definerer funksjon for å bytte tilstanden til en celle
-    function toggleCell(i, j) {
-        grid[i][j] = grid[i][j] ? 0 : 1;
-        const cell = gridContainer.children[i * cols + j];
-        cell.classList.toggle('alive');
-    }
-
-    // Definerer funksjon for å klargjøre gridet
-    function clearGrid() {
-        grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
-        const cells = document.querySelectorAll('.cell');
-        cells.forEach(cell => cell.classList.remove('alive'));
-    }
-
-    // Definerer funksjon for å starte eller pause spill-loopen
-    function togglePlay() {
-        isPlaying = !isPlaying;
-        if (isPlaying) {
-            playPauseButton.textContent = 'Pause';
-            timerId = setInterval(updateGrid, interval);
-        } else {
-            playPauseButton.textContent = 'Play';
-            clearInterval(timerId);
-        }
-    }
-
-    // Definerer funksjon for å oppdatere tilstanden til gridet
-    function updateGrid() {
-        let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
-
-        for (let i = 0; i < rows; i++) {
-            for (let j = 0; j < cols; j++) {
-                let neighbors = 0;
-                for (let x = -1; x <= 1; x++) {
-                    for (let y = -1; y <= 1; y++) {
-                        if (i + x >= 0 && i + x < rows && j + y >= 0 && j + y < cols) {
-                            neighbors += grid[i + x][j + y];
-                        }
-                    }
-                }
-                neighbors -= grid[i][j];
-
-                if (grid[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
-                    newGrid[i][j] = 0;
-                    // Finn synth for denne cellen og frigjør den for gjenbruk
-                    const synthIndex = activeSynths.findIndex(s => s.cellX === i && s.cellY === j);
-                    if (synthIndex !== -1) {
-                        const synth = activeSynths.splice(synthIndex, 1)[0];
-                        availableSynths.push(synth);
-                    }
-                } else if (grid[i][j] === 0 && neighbors === 3) {
-                    newGrid[i][j] = 1;
-                    playNote(i, j);
-                } else {
-                    newGrid[i][j] = grid[i][j];
-                }
-            }
+            const source = audioCtx.createBufferSource();
+            source.buffer = audioBuffer;
+            source.connect(audioCtx.destination);
+            source.start();
         }
 
-        // Oppdaterer HTML-grid med ny tilstand
-        const cells = document.querySelectorAll('.cell');
-        newGrid.forEach((row, i) => {
-            row.forEach((cell, j) => {
-                if (cell === 1) {
-                    cells[i * cols + j].classList.add('alive');
-                } else {
-                    cells[i * cols + j].classList.remove('alive');
-                }
-            });
-        });
-
-        grid = newGrid;
-    }
-
-    // Definerer funksjon for å spille en note
-    function playNote(i, j) {
-        let synth;
-        if (availableSynths.length > 0) {
-            // Bruk en tilgjengelig synth hvis tilgjengelig
-            synth = availableSynths.pop();
-        } else {
-            // Opprett en ny synth hvis ingen tilgjengelige synther
-            synth = new Tone.Synth().toDestination();
-        }
-
-        // Konverterer vertikale posisjonen til noten i pentatonisk skala
-        const noteIndex = (i + j) % pentatonicScale.length;
-        const note = pentatonicScale[noteIndex];
-        // Konverterer horisontale posisjonen til gain (basert på 0-1 området)
-        const gain = j / cols;
-
-        // Spill tonen med den spesifikke noten og gain-verdien
-        synth.triggerAttackRelease(note, '8n', undefined, gain);
-
-        // Lagre synth-informasjon for senere gjenbruk
-        synth.cellX = i;
-        synth.cellY = j;
-        activeSynths.push(synth);
-    }
-</script>
+        // Example: Draw and sonify Hilbert Curve of order 4
+        const order = 4;
+        drawHilbertCurve(order);
+        sonifyHilbertCurve(order);
+    </script>
 </body>
 </html>
