--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(243, 114, 8);
+            background-color: rgb(8, 176, 243);
         }
 
         #video-container {
@@ -328,7 +328,10 @@ function updateGrid() {
 }
 
 // Definerer pentatonisk skala (C pentatonisk)
-const pentatonicScale = ['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2'];
+const pentatonicScale = ['C1', 'D1', 'E1', 'G1', 'A1', 'C2', 'D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4' ];
+
+
+//['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2'];
 
 
 //['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6', ];
