--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(243, 200, 8);
+            background-color: rgb(110, 8, 243);
         }
 
         #video-container {
@@ -39,6 +39,7 @@
             width: 32px;
             height: 32px;
             border: 1px solid #000;
+            border-radius: 50px;
         }
 
         #grid {
