--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(110, 8, 243);
+            background-color: rgb(243, 141, 8);
         }
 
         #video-container {
@@ -58,10 +58,13 @@
             width: 32px;
             height: 32px;
             border: 2px solid rgb(102, 8, 253);
+            border-radius: 50px;
+            
         }
 
         .alive {
             background-color: rgb(20, 2, 3);
+            border-radius: 50px;
         }
     </style>
 </head>
@@ -358,10 +361,10 @@ function updateGrid() {
 }
 
 // Definerer pentatonisk skala (C pentatonisk)
-const pentatonicScale = ['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6', ];
+const pentatonicScale = ['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2','C3', 'G3', 'D3', 'A3', 'E3', 'B3', 'F#3', 'Db3', 'Ab2', 'Eb2', 'Bb2', 'F2'];
 
 
-//['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2'];
+//['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2','C3', 'G3', 'D3', 'A3', 'E3', 'B3', 'F#3', 'Db3', 'Ab2', 'Eb2', 'Bb2', 'F2'];
 
 
 //['D2', 'E2', 'G2', 'A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5', 'A5', 'C6', ];
