--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(243, 8, 59);
+            background-color: rgb(22, 1, 5);
         }
 
         #video-container {
@@ -32,7 +32,7 @@
             grid-template-rows: repeat(15, 32px);
             width: 640px; 
             height: 480px; 
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
+            /* transform: scaleX(-1); /* Speilvend pikselrutenettet */
 
         }
         .pixel {
@@ -50,7 +50,7 @@
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
-            transform: scaleX(-1); /* Speilvend pikselrutenettet */
+          /*  transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
 
         .cell {
