--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(211, 4, 4);
+            background-color: rgb(211, 104, 4);
         }
 
         #video-container {
@@ -89,7 +89,9 @@
 
     <script>
         const pixelSize = 32;
-        const threshold = 250; // Threshold for darkness
+        const threshold = 155; // Threshold for darkness
+        const threshold2 = 156; // ikke lysere enn
+        
         let pixelGrid = [];
 
         const initPixelGrid = () => {
@@ -122,7 +124,7 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-                    if (averageBrightness > threshold) {
+                    if ((averageBrightness > threshold) && (averageBrightness < threshold2)){
                         if (!pixelGrid[y][x]) {
                             
                             pixelGrid[y][x] = true;
