--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,8 @@
     <style>
 
         body {
-            background-color: rgb(211, 104, 4);
+            /* background-color: rgb(211, 104, 4); interessant farge*/
+            background-color: rgb(149, 211, 4);
         }
 
         #video-container {
@@ -89,8 +90,8 @@
 
     <script>
         const pixelSize = 32;
-        const threshold = 155; // Threshold for darkness
-        const threshold2 = 156; // ikke lysere enn
+        const threshold = 200; // Threshold for darkness
+        const threshold2 = 250; // ikke lysere enn
         
         let pixelGrid = [];
 
