react to light areas

--- a/son1.html
+++ b/son1.html
@@ -7,7 +7,8 @@
     <style>
 
         body {
-            background-color: rgb(211, 104, 4);
+            background-color: rgb(95, 46, 0);
+           /* background-color: rgb(211, 104, 4);  bra farge*/
         }
 
         #video-container {
@@ -165,10 +166,7 @@
                 console.error('An error occurred: ', err);
             });
 
-            
-
-            // Oppretter en Tone.js polysynth
-const polySynth = new Tone.PolySynth().toDestination();
+        
 
 // Definerer parametere for Game of Life
 
