--- a/son2.html
+++ b/son2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(166, 211, 4);
+            background-color: rgb(211, 4, 21);
         }
 
         #video-container {
@@ -364,7 +364,8 @@ function updateGrid() {
 let pentatonicScale = ['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2','C3', 'G3', 'D3', 'A3', 'E3', 'B3', 'F#3', 'Db3', 'Ab2', 'Eb2', 'Bb2', 'F2'];
 
 
-// ['C0', 'G0', 'D1', 'A1', 'E3', 'B3', 'F#4', 'Db5', 'Ab5', 'Eb6', 'Bb6', 'F7','C8'];
+// ['C0', 'G0', 'D1', 'A1', 'E3', 'B3', 'F#4', 'Db5', 'Ab5', 'Eb6', 'Bb6', 'F7','C8']; // kvintsirkel
+
 //['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2','C3', 'G3', 'D3', 'A3', 'E3', 'B3', 'F#3', 'Db3', 'Ab2', 'Eb2', 'Bb2', 'F2'];
 
 
@@ -380,7 +381,7 @@ function playNote(i, j) {
         synth = availableSynths.pop();
     } else {
         // Opprett en ny synth hvis ingen tilgjengelige synther
-        synth = new Tone.PluckSynth().toDestination();
+        synth = new Tone.Synth().toDestination();
     }
 
     // Konverterer vertikale posisjonen til noten i pentatonisk skala
