react to light areas

--- a/son2.html
+++ b/son2.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background-color: rgb(211, 4, 21);
+            background-color: rgb(211, 180, 4);
         }
 
         #video-container {
@@ -361,7 +361,7 @@ function updateGrid() {
 }
 
 // Definerer pentatonisk skala (C pentatonisk)
-let pentatonicScale = ['C2', 'G2', 'D2', 'A2', 'E2', 'B2', 'F#2', 'Db2', 'Ab2', 'Eb2', 'Bb2', 'F2','C3', 'G3', 'D3', 'A3', 'E3', 'B3', 'F#3', 'Db3', 'Ab2', 'Eb2', 'Bb2', 'F2'];
+let pentatonicScale = ['A2', 'C3', 'D3', 'E3', 'G3', 'A3', 'C4', 'D4', 'E4', 'G4', 'A4', 'C5', 'D5', 'E5', 'G5' ];
 
 
 // ['C0', 'G0', 'D1', 'A1', 'E3', 'B3', 'F#4', 'Db5', 'Ab5', 'Eb6', 'Bb6', 'F7','C8']; // kvintsirkel
