--- a/son3.html
+++ b/son3.html
@@ -8,43 +8,53 @@
         body {
             background-color: rgb(4, 211, 201);
         }
-
         #video-container {
             position: relative;
             width: 640px; /* Just an example width */
             height: 700px; /* Just an example height */
         }
-
         #controls {
             position: static;
             width: 400px; /* Just an example width */
             height: 400px; /* Just an example height */
         }
-
-        #pixel-grid, #grid {
+        #pixel-grid {
             position: absolute;
             top: 0;
             left: 0;
             display: grid;
             grid-template-columns: repeat(20, 32px);
             grid-template-rows: repeat(15, 32px);
-            width: 640px;
+            width: 640px; 
             height: 480px;
+            /*transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
-
-        .pixel, .cell {
+        .pixel {
             width: 32px;
             height: 32px;
             border: 1px solid #000;
             border-radius: 50px;
         }
-
-        .cell {
-            border: 2px solid rgb(0, 0, 0);
+        #grid {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 640px;
+            height: 640px;
+            display: grid;
+            grid-template-columns: repeat(20, 32px);
+            grid-template-rows: repeat(15, 32px);
+            /* transform: scaleX(-1); /* Speilvend pikselrutenettet */
         }
-
+        .cell {
+            width: 32px;
+            height: 32px;
+            border: 2px solid rgb(0, 0, 0);
+            border-radius: 50px;
+        }
         .alive {
             background-color: rgb(20, 2, 3);
+            border-radius: 50px;
         }
     </style>
 </head>
@@ -54,16 +64,13 @@
         <canvas id="canvas" width="640" height="640"></canvas>
         <div id="grid"></div>
     </div>
-
     <div id="controls">
         <button id="playPause">Play / Pause</button>
         <button id="clear">Clear</button>
         <button id="glider">Draw glider</button>
         <button id="glider2">Draw glider 2</button>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.26/Tone.js"></script>
-
     <script>
         const pixelSize = 32;
         const threshold = 155; // Threshold for darkness
@@ -85,7 +92,7 @@
             const offsetX = (videoElement.videoWidth - videoElement.videoHeight) / 2;
             context.drawImage(videoElement, offsetX, 0, videoElement.videoHeight, videoElement.videoHeight, 0, 0, canvas.width, canvas.height);
             const imageData = context.getImageData(0, 0, videoWidth, videoHeight).data;
-
+            
             for (let y = 0; y < 20; y++) {
                 for (let x = 0; x < 20; x++) {
                     const pixelIndex = (y * videoWidth * 4 * pixelSize) + (x * 4 * pixelSize);
@@ -99,7 +106,7 @@
                     }
                     averageBrightness /= (pixelSize * pixelSize);
 
-                    if (averageBrightness > threshold && averageBrightness < threshold2) {
+                    if ((averageBrightness > threshold) && (averageBrightness < threshold2)){
                         if (!pixelGrid[y][x]) {
                             pixelGrid[y][x] = true;
                             context.fillStyle = '#000';
@@ -140,7 +147,7 @@
         // Definerer parametere for Game of Life
         const rows = 15;
         const cols = 20;
-        let interval = 100; // Tidsintervall i millisekunder
+        let interval = 100 // Tidsintervall i millisekunder
         let isPlaying = false;
         let timerId;
 
@@ -166,32 +173,40 @@
         const playPauseButton = document.getElementById('playPause');
         playPauseButton.addEventListener('click', togglePlay);
 
-        // Opprett event listener for glider-knappen
+        // Legg til en keydown-hendelse for å lytte etter "P"-tasten
+        document.addEventListener('keydown', (event) => {
+            if (event.key.toLowerCase() === 'p') {
+                togglePlay();
+            }
+        });
+
+        // Opprett en event listener for glider-knappen
         const gliderButton = document.getElementById('glider');
         gliderButton.addEventListener('click', drawGlider);
 
-        // Opprett event listener for den andre glider-knappen
+        // Opprett en event listener for den andre glider-knappen
         const gliderButton2 = document.getElementById('glider2');
         gliderButton2.addEventListener('click', secondGlider);
 
-        // Opprett event listener for clear-knappen
-        const clearButton = document.getElementById('clear');
-        clearButton.addEventListener('click', clearGrid);
-
-        // Legg til keydown-hendelser for å lytte etter tastene
+        // Legg til en keydown-hendelse for å lytte etter "G"-tasten
         document.addEventListener('keydown', (event) => {
-            const key = event.key.toLowerCase();
-            if (key === 'p') togglePlay();
-            if (key === 'g') drawGlider();
-            if (key === 'h') secondGlider();
-            if (key === 'c') clearGrid();
+            if (event.key.toLowerCase() === 'g') {
+                drawGlider();
+            }
+        });
+
+        // Legg til en keydown-hendelse for å lytte etter "G"-tasten
+        document.addEventListener('keydown', (event) => {
+            if (event.key.toLowerCase() === 'h') {
+                secondGlider();
+            }
         });
 
         // Tegn inn en glider
-        function drawGlider() {
+        function drawGlider(i, j) {
             for (let i = 0; i < rows; i++) {
                 for (let j = 0; j < cols; j++) {
-                    if ((i == 0 && j == 0) || (i == 1 && j == 1) || (i == 1 && j == 2) || (i == 2 && j == 0) || (i == 2 && j == 1)) {
+                    if ((i == 0 && j == 0) || (i == 1 && j == 1) || (i == 1 && j == 2) || (i == 2 && j == 0) || (i == 2 && j == 1)){
                         const cell = gridContainer.children[i * cols + j];
                         cell.classList.toggle('alive');
                         grid[i][j] = 1;
@@ -200,10 +215,10 @@
             }
         }
 
-        function secondGlider() {
+        function secondGlider(i, j) {
             for (let i = 0; i < rows; i++) {
                 for (let j = 0; j < cols; j++) {
-                    if ((i == 0 && j == 19) || (i == 1 && j == 18) || (i == 1 && j == 17) || (i == 2 && j == 19) || (i == 2 && j == 18)) {
+                    if ((i == 0 && j == 1) || (i == 1 && j == 2) || (i == 1 && j == 3) || (i == 2 && j == 1) || (i == 2 && j == 2)){
                         const cell = gridContainer.children[i * cols + j];
                         cell.classList.toggle('alive');
                         grid[i][j] = 1;
@@ -212,95 +227,154 @@
             }
         }
 
-        // Definerer funksjon for å bytte tilstanden til en celle
-        function toggleCell(i, j) {
-            grid[i][j] = grid[i][j] ? 0 : 1;
-            const cell = gridContainer.children[i * cols + j];
+        // Opprett en event listener for clear-knappen
+        const clearButton = document.getElementById('clear');
+        clearButton.addEventListener('click', clearGrid);
+
+        // Legg til en keydown-hendelse for å lytte etter "C"-tasten
+        document.addEventListener('keydown', (event) => {
+            if (event.key.toLowerCase() === 'c') {
+                clearGrid();
+            }
+        });
+
+        // Funksjon for å toggle en celle
+        function toggleCell(row, col) {
+            const cell = gridContainer.children[row * cols + col];
             cell.classList.toggle('alive');
+            grid[row][col] = grid[row][col] ? 0 : 1;
         }
 
-        // Definerer funksjon for å klargjøre gridet
-        function clearGrid() {
-            grid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
-            const cells = document.querySelectorAll('.cell');
-            cells.forEach(cell => cell.classList.remove('alive'));
-        }
-
-        // Definerer funksjon for å spille av eller pause spillet
-        function togglePlay() {
-            isPlaying = !isPlaying;
-            if (isPlaying) {
-                playPauseButton.textContent = 'Pause';
-                timerId = setInterval(updateGrid, interval);
-            } else {
-                playPauseButton.textContent = 'Play';
-                clearInterval(timerId);
-            }
-        }
-
-        // Oppretter og initialiserer synths
-        function initializeSynths() {
-            for (let i = 0; i < 10; i++) {
-                const synth = new Tone.Synth().toDestination();
-                synth.cellX = -1;
-                synth.cellY = -1;
-                availableSynths.push(synth);
-            }
-        }
-        initializeSynths();
-
-        // Funksjon for å oppdatere gridet og spille toner basert på Game of Life-reglene
+        // Funksjon for å oppdatere grid til neste generasjon
         function updateGrid() {
             let newGrid = new Array(rows).fill(null).map(() => new Array(cols).fill(0));
+            let numActiveCells = 0;
 
-            for (let i = 0; i < rows; i++) {
-                for (let j = 0; j < cols; j++) {
-                    let neighbors = 0;
-                    for (let x = -1; x <= 1; x++) {
-                        for (let y = -1; y <= 1; y++) {
-                            if (i + x >= 0 && i + x < rows && j + y >= 0 && j + y < cols) {
-                                neighbors += grid[i + x][j + y];
-                            }
-                        }
-                    }
-                    neighbors -= grid[i][j];
-
-                    // Apply Game of Life rules
-                    if (grid[i][j] === 1 && (neighbors < 2 || neighbors > 3)) {
-                        newGrid[i][j] = 0;
-
-                        // Remove the synth from activeSynths and add it to availableSynths
-                        const synthIndex = activeSynths.findIndex(s => s.cellX === i && s.cellY === j);
-                        if (synthIndex !== -1) {
-                            const synth = activeSynths.splice(synthIndex, 1)[0];
-                            availableSynths.push(synth);
-                        }
-                    } else if (grid[i][j] === 0 && neighbors === 3) {
-                        newGrid[i][j] = 1;
-
-                        // Create a new synth if available
-                        if (availableSynths.length > 0) {
-                            const synth = availableSynths.pop();
-                            synth.cellX = i;
-                            synth.cellY = j;
-                            activeSynths.push(synth);
-                            synth.triggerAttackRelease("C4", "8n");
+            for (let row = 0; row < rows; row++) {
+                for (let col = 0; col < cols; col++) {
+                    const numNeighbors = countNeighbors(row, col);
+                    if (grid[row][col] === 1) {
+                        if (numNeighbors === 2 || numNeighbors === 3) {
+                            newGrid[row][col] = 1;
+                            numActiveCells++;
                         }
                     } else {
-                        newGrid[i][j] = grid[i][j];
+                        if (numNeighbors === 3) {
+                            newGrid[row][col] = 1;
+                            numActiveCells++;
+                        }
                     }
+                }
+            }
 
-                    // Update the cell color based on its state
-                    const cell = gridContainer.children[i * cols + j];
-                    if (newGrid[i][j] === 1) {
+            grid = newGrid;
+            renderGrid();
+
+            // Bytt skala basert på antall aktiverte celler
+            if (numActiveCells > 10) {
+                changeScale();
+            }
+        }
+
+        // Funksjon for å endre skala
+        function changeScale() {
+            pentatonicScale = pentatonicScale2;
+        }
+
+        // Funksjon for å telle antall naboer
+        function countNeighbors(row, col) {
+            const deltas = [-1, 0, 1];
+            let count = 0;
+
+            for (let i = 0; i < deltas.length; i++) {
+                for (let j = 0; j < deltas.length; j++) {
+                    if (!(deltas[i] === 0 && deltas[j] === 0)) {
+                        const newRow = row + deltas[i];
+                        const newCol = col + deltas[j];
+
+                        if (newRow >= 0 && newRow < rows && newCol >= 0 && newCol < cols) {
+                            count += grid[newRow][newCol];
+                        }
+                    }
+                }
+            }
+
+            return count;
+        }
+
+        // Funksjon for å rendre grid i HTML
+        function renderGrid() {
+            for (let row = 0; row < rows; row++) {
+                for (let col = 0; col < cols; col++) {
+                    const cell = gridContainer.children[row * cols + col];
+                    if (grid[row][col] === 1) {
                         cell.classList.add('alive');
                     } else {
                         cell.classList.remove('alive');
                     }
                 }
             }
-            grid = newGrid;
         }
+
+        // Funksjon for å toggle play/pause
+        function togglePlay() {
+            isPlaying = !isPlaying;
+            if (isPlaying) {
+                timerId = setInterval(updateGrid, interval);
+            } else {
+                clearInterval(timerId);
+            }
+        }
+
+        // Funksjon for å tømme grid
+        function clearGrid() {
+            for (let row = 0; row < rows; row++) {
+                for (let col = 0; col < cols; col++) {
+                    grid[row][col] = 0;
+                }
+            }
+            renderGrid();
+        }
+
+        // Pentatonic skalaer
+        let pentatonicScale = [261.63, 293.66, 329.63, 392.00, 440.00]; // C4, D4, E4, G4, A4
+        let pentatonicScale2 = [277.18, 311.13, 369.99, 415.30, 466.16]; // C#4, D#4, F#4, G#4, A#4
+
+        // Tone.js synth
+        let synth = new Tone.PolySynth(Tone.Synth).toDestination();
+        synth.volume.value = -10;
+
+        // Funksjon for å spille toner basert på cellens status
+        function playTones() {
+            let activeNotes = [];
+
+            for (let row = 0; row < rows; row++) {
+                for (let col = 0; col < cols; col++) {
+                    if (grid[row][col] === 1) {
+                        const noteIndex = (row * cols + col) % pentatonicScale.length;
+                        const note = pentatonicScale[noteIndex];
+                        activeNotes.push(note);
+                    }
+                }
+            }
+
+            synth.triggerAttackRelease(activeNotes, '8n');
+        }
+
+        // Funksjon for å kjøre musikkoppdatering
+        function musicUpdate() {
+            playTones();
+            if (isPlaying) {
+                setTimeout(musicUpdate, interval);
+            }
+        }
+
+        // Start musikkoppdateringen når grid er i spillmodus
+        playPauseButton.addEventListener('click', () => {
+            if (isPlaying) {
+                musicUpdate();
+            }
+        });
     </script>
 </body>
 </html>
